# GPR-200-Dev-Environment

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment1_helloTriangle/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment_2/: CMakeLists.txt  main.cpp  templateMain.cpp
assignments/assignment_2/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment_2/assets/Shaders/Background Shader/: BG_FragmentShader.frag  BG_VertexShader.vert
assignments/assignment_2/assets/Shaders/Character Shader/: Character_FragmentShader.frag  Character_VertexShader.vert
assignments/assignment_2/assets/Textures/AssignmentImages/: Credits
assignments/assignment_4/: CMakeLists.txt  main.cpp
assignments/assignment_4/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment_4/assets/Shaders/: fragmentShader.frag  vertexShader.vert
assignments/assignment_4/scripts/practice/: Matrices Practice
assignments/assignment_5/: CMakeLists.txt  main.cpp
assignments/assignment_5/assets/Shaders/: fragmentShader.frag  vertexShader.vert
assignments/assignment_5/scripts/Scene Manager/: SceneManager.cpp  SceneManager.h
assignments/assignment_5/scripts/User Input/: UserInput.cpp  UserInput.h
assignments/final_project/: CMakeLists.txt  main.cpp
assignments/final_project/assets/Models/: Credits
assignments/final_project/assets/Textures/: Credits
core/: CMakeLists.txt
core/Bella/: camera.cpp  camera.h  definitionColours.cpp  definitionColours.h  definitionFunctions.cpp  definitionFunctions.h  drawShape.cpp  drawShape.h  shader.cpp  shader.h  texture.cpp  texture.h
core/Bella/Definitions/: definitionColours.h  definitionFunctions.h  drawShape.h
core/Bella/Definitions/Shapes/Vertex/: drawShape.cpp  drawShape.h
core/Bella/Mechanic/: camera.h  light.cpp  light.h  shader.cpp  shader.h  texture.h
core/Bella/Mechanic/Camera/: camera.cpp  camera.h
core/Bella/Mechanic/Lighting/Light Class/: light.cpp  light.h
core/Bella/Mechanic/Lighting/Light Uniforms/: light_params.txt
core/Bella/Mechanic/Lighting/Light Uniforms/Models/: blinn_phong.txt  phong.txt
core/Bella/Mechanic/Lighting/Light Uniforms/Types/: directional.txr  point.txt  spotlight.txt
core/Bella/Mechanic/Model/: mesh.cpp  mesh.h  model.cpp  model.h
core/Bella/Mechanic/Particle/: Particle.cpp  Particle.h
core/Bella/Mechanic/Particle/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
core/Bella/Mechanic/Scene/: Scene.cpp  Scene.h
core/Bella/Mechanic/Shader/: shader.cpp  shader.h
core/Bella/Mechanic/Terrain/: TerrainGenerator.cpp  TerrainGenerator.h
core/Bella/Mechanic/Texture/: TerrainGenerator.cpp  TerrainGenerator.h  texture.h
core/ak/: Camera.cpp  Camera.h
sub-projects/Arijek-System/: CMakeLists.txt  main.cpp
sub-projects/Arijek-System/assets/Code/Scene Manager/: SceneManager.h
sub-projects/Arijek-System/assets/Code/Terrain/: TerrainGenerator.cpp  TerrainGenerator.h
sub-projects/Arijek-System/assets/Code/User Input/: UserInput.cpp
sub-projects/Arijek-System/assets/Models/: rem.fbx
sub-projects/Arijek-System/assets/Shaders/Particles/Snow/: SnowFrag.frag
sub-projects/Arijek-System/assets/Shaders/Pixel Shader/: pixelFrag.frag
sub-projects/Arijek-System/assets/Shaders/TerrainShader/: TerrainFrag.frag  TerrainVert.vert
sub-projects/Arijek-System/assets/Shaders/Test Shaders/: testShaderFragment.frag
sub-projects/project_1/: CMakeLists.txt  main.cpp
sub-projects/project_1/assets/Code/Scene Manager/: SceneManager.cpp  SceneManager.h
sub-projects/project_1/assets/Code/User Input/: UserInput.cpp  UserInput.h
sub-projects/project_1/assets/Shaders/Generic/: genericModel.frag
sub-projects/project_2/: CMakeLists.txt  main.cpp
sub-projects/project_2/assets/: fragmentShader.frag
sub-projects/project_2/assets/Code/Objects/: camera.cpp  camera.h  light.cpp  light.h  shader.cpp  shader.h  texture.cpp  texture.h
sub-projects/project_2/assets/Code/Objects/Model/: mesh.cpp  mesh.h  model.cpp  model.h
sub-projects/project_3/: CMakeLists.txt  main.cpp
sub-projects/project_3/assets/: fragmentShader.frag
sub-projects/project_3/scripts/: InitiateAssets.cpp  InitiateAssets.h  Program.cpp  Program.h
sub-projects/project_3/scripts/AssetManager/: AssetManager.cpp  AssetManager.h
sub-projects/project_4/: CMakeLists.txt  main.cpp
sub-projects/project_4/assets/Shaders/: fragmentShader.frag
sub-projects/project_4/assets/Shaders/Light Cube/: lightCubeFrag.frag
sub-projects/project_4/scripts/Scene Manager/: SceneManager.cpp  SceneManager.h
sub-projects/project_4/scripts/User Input/: UserInput.cpp  UserInput.h
